# eyeq

./: .gitignore  LICENSE  README.md  build  configure  meson.build  meson_options.txt
include/eyeq/: block.h  client.h  samples.pb.h  server.h  shared.h
include/eyeq/server/: store.h  stream.h
python/: .gitignore  Convolve Test.ipynb  Daemon Reader.ipynb  Dealer Client.ipynb  Dealer Server.ipynb  Example Notebook.ipynb  develop.sh  jetson_test.ipynb  load_samples.py  setup.py
python/eyeq/: Makefile  __init__.py  block.py  client.py  samples.proto  samples_pb2.py
python/eyeq/viewer/: __main__.py
python/test/: block_test.py
src/client/: client.c  eyeq_slash.c  filters.c  filters.h  main.c  test_client.c
src/proto/: generate.sh  samples.options  samples.pb.c  samples.pb.h  samples.proto
src/server/: crc32.c  main.c  server.c  util.h
src/server/store/: store.c  test_store.c
src/server/stream/: stream.c  stream.h  test_stream.c
tools/: plot_samples.py
